--- a/examples/moe_package/configs/MI355X/moe_proxy-pretrain-baseline.yaml
+++ b/examples/moe_package/configs/MI355X/moe_proxy-pretrain-baseline.yaml
@@ -1,7 +1,7 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:deepseek_v3-pretrain}
-workspace: ${PRIMUS_WORKSPACE:./output}
+exp_name: ${PRIMUS_EXP_NAME:moe_proxy_single_node-pretrain}
+workspace: ./output
 
 modules:
   pre_trainer:
@@ -9,10 +9,10 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL:deepseek_v3}.yaml
+    model: ${PRIMUS_MODEL:moe_proxy_single_node}.yaml
     overrides:
       # log
-      wandb_project: "Primus_DeepSeek_Pretrain"
+      wandb_project: "Primus_MoE_Pretrain"
       stderr_sink_level: DEBUG
 
       # debug
@@ -22,7 +22,7 @@ modules:
 
       # hyper parameters
       train_iters: 50
-      micro_batch_size: 4
+      micro_batch_size: 1
       global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
@@ -37,6 +37,11 @@ modules:
       eod_mask_loss: true
       init_method_std: 0.008
       norm_epsilon: 1.0e-6
+
+      # recompute
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 14 # int
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
@@ -57,9 +62,11 @@ modules:
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: false
+      moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
+      # pad 192/128 for deepseek attention
+      fused_padded_mla_attention: false
       # MLA
       multi_latent_attention: false
 
@@ -76,12 +83,3 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
-
-      # Turbo
-      enable_primus_turbo: false
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
-
-      # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
