MoE package - version1 (#282)
## Key components
1. **New `moe_package`**: A comprehensive guide and set of scripts for
MoE training on AMD GPUs.
2. **Supported Models**: DeepSeek V2 Lite, V2, V3, and large proxy
models.
3. **Optimizations**: Turbo Attention, DeepEP, Sync-Free MoE, 1F1B
Overlap, Zero-Bubble PP, etc.
4.  **Configuration Updates**: Updated YAML configs for MI300X/MI355X.
5. **AINIC**: Turn on AINIC support by export USING_AINIC=1 (MI355
Cluster)
6. **Documentation**: Detailed README with performance analysis and
tuning guides.

## Summary
This PR merges the `dev/tas/moe_package` branch into `main`. It
introduces the **MoE Package**, a comprehensive suite of scripts,
configurations, and best practices for training Mixture-of-Experts (MoE)
models on AMD Instinct™ GPUs (MI300X, MI325X, MI355X).

The update focuses on enabling and optimizing **DeepSeek** series models
(V2 Lite, V2, V3) and large-scale proxy models (1T/2T), incorporating
advanced performance features like Turbo Attention, DeepEP, and
Sync-Free routing.

## Key Changes

### 1. New MoE Package (`examples/moe_package/`)
- Added a dedicated directory for MoE training resources.
- **Documentation**: Comprehensive `README.md` covering model overviews,
profiling workflows, memory analysis, and model-specific optimization
guides.
- **Scripts**: New launch scripts for DeepSeek V2 Lite, V2, V3, and MoE
Proxy models on MI355X and MI325X.
- **Performance Figures**: Added baseline and optimization scaling
figures (throughput/memory).

### 2. Supported Models & Configurations
- **DeepSeek Series**: Support for V2 Lite (16B), V2 (236B), and V3
(671B).
- **Proxy Models**: Configurations for 1T and 2T parameter proxy models
for scalability testing.
- **Config Updates**: Updated existing config files in
`examples/megatron/configs/` (MI300X/MI355X) for Llama4, Grok, Mixtral,
and GPT-OSS.

### 3. Performance Optimizations (MoE Features)
Introduced a modular feature toggle system in scripts (Features 0-11)
incl

--- a/examples/megatron/configs/MI300X/deepseek_v2-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2-pretrain.yaml
@@ -20,7 +20,7 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      # hyber parameters
+      # hyper parameters
       train_iters: 50
       micro_batch_size: 1
       global_batch_size: 256
@@ -65,8 +65,8 @@ modules:
       moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
+      # MLA
+      multi_latent_attention: false
 
       # ckpt
       finetune: false
@@ -81,3 +81,26 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+      # Turbo
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
+
+      # deepep
+      use_turbo_deepep: true
+      moe_shared_expert_overlap: false
+      moe_router_dtype: fp32
+
+      # 64 or 80 for ep8, 32 for ep16-64 is best practice
+      turbo_deepep_num_cu: 64
+      turbo_deepep_use_comm_stream: false
+
+      # sync-free moe support stage 0-3, 0 means not use sync-free moe
+      # stage 3 is completely no gpu-cpu sync in MoE, but cost more memory
+      # stage 2 is recommended for better performance
+      turbo_sync_free_moe_stage: 2
+
+      # Cross entropy flags
+      # cross_entropy_fusion_impl: "te"
+      # cross_entropy_loss_fusion: true
