--- a/examples/megatron/configs/MI355X/deepseek_v3-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v3-pretrain.yaml
@@ -20,7 +20,7 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      # hyber parameters
+      # hyper parameters
       train_iters: 50
       micro_batch_size: 4
       global_batch_size: 256
@@ -60,12 +60,11 @@ modules:
       moe_use_legacy_grouped_gemm: false
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
+      # MLA
+      multi_latent_attention: false
 
       # Performance toggles
-      #multi_latent_attention: false
-      #apply_rope_fusion: true
+      # multi_latent_attention: false
 
       # ckpt
       finetune: false
@@ -82,7 +81,7 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: true
+      enable_primus_turbo: false
       use_turbo_attention: false
       use_turbo_grouped_mlp: false
 
