--- a/examples/moe_package/configs/MI355X/deepseek_v2_lite-pretrain-baseline.yaml
+++ b/examples/moe_package/configs/MI355X/deepseek_v2_lite-pretrain-baseline.yaml
@@ -1,7 +1,7 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: &exp_name ${PRIMUS_EXP_NAME:exp_pretrain}
-workspace: ${PRIMUS_WORKSPACE:./output}
+exp_name: ${PRIMUS_EXP_NAME:deepseek_v2_lite-pretrain}
+workspace: ./output
 
 modules:
   pre_trainer:
@@ -9,38 +9,21 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL:llama2_7B}.yaml
+    model: ${PRIMUS_MODEL:deepseek_v2_lite}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
-      # disable_wandb: false
-      # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
       # debug
-      # num_layers: 5
-      # optimizer: adam
       moe_router_force_load_balancing: true
-      moe_router_dtype: null
       log_avg_skip_iterations: 2
-      log_avg_reset_interval: 5
-      # ddp_bucket_size: 629145600
-
-      # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 1 # int
-
-      # profile
-      # profile: true
-      # use_pytorch_profiler: true
-      # profile_step_end: 7
-      # profile_step_start: 6
+      log_avg_reset_interval: 50
 
       # hyper parameters
-      train_iters: 3
-      micro_batch_size: 1
-      global_batch_size: 16
+      train_iters: 50
+      micro_batch_size: 12
+      global_batch_size: 768
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -58,11 +41,12 @@ modules:
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
       pipeline_model_parallel_size: ${PRIMUS_PP:1}
-      expert_model_parallel_size: ${PRIMUS_EP:1}
+      expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
       overlap_param_gather: true
 
       # data
+      mock_data: true
       train_data_path: ${PRIMUS_TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
@@ -71,9 +55,13 @@ modules:
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
       # fused wgrad gemm and accumulation
-      gradient_accumulation_fusion: true
+      gradient_accumulation_fusion: false
       # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: true
+      moe_use_legacy_grouped_gemm: false
+      # fused topk router with aux score
+      moe_use_fused_router_with_aux_score: false
+      # MLA
+      multi_latent_attention: false
 
       # ckpt
       finetune: false
@@ -87,3 +75,4 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+      eval_iters: 0
