--- a/primus/configs/models/megatron/moe_proxy_single_node.yaml
+++ b/primus/configs/models/megatron/moe_proxy_single_node.yaml
@@ -5,8 +5,10 @@ tokenizer_type: DeepSeekV2Tokenizer
 tokenizer_model: deepseek-ai/DeepSeek-V2-Lite
 
 # model
-num_layers: 48
-hidden_size: 3072
+num_layers: 56
+hidden_size: 2048
+# num_layers: 48
+# hidden_size: 3072
 num_attention_heads: 32
 group_query_attention: true
 num_query_groups: 8
