--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,9 +106,19 @@ jobs:
           elapsed=$((end_time - start_time))
           echo "⏱️ [build primus docker-gfx950] Total elapsed time: ${elapsed} seconds"
 
+          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950-ainic"
+          start_time=$(date +%s)
+          docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950_ainic \
+               -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic \
+               --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} .
+          end_time=$(date +%s)
+          elapsed=$((end_time - start_time))
+          echo "⏱️ [build primus docker-gfx950-ainic] Total elapsed time: ${elapsed} seconds"
+
           echo "> Docker tag image for Docker Hub"
           docker tag tasimage/primus:${{env.IMAGE_TAG}} docker.io/tasimage/primus:${{env.IMAGE_TAG}}
           docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950 docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
+          docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
 
           echo "> Login to Primus Docker Hub"
           docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
@@ -117,6 +127,7 @@ jobs:
           start_time=$(date +%s)
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
+          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
           end_time=$(date +%s)
           elapsed=$((end_time - start_time))
           echo "⏱️ [push primus docker] Total elapsed time: ${elapsed} seconds"
@@ -124,6 +135,7 @@ jobs:
           # echo "> Docker cleanup local images"
           # docker rmi tasimage/primus:${{env.IMAGE_TAG}}
           # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-gfx950
+          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
           # echo "> build-docker success"
 
   run-unittest:
