--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,6 +108,7 @@ jobs:
 
           echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950-ainic"
           start_time=$(date +%s)
+          cp -rd /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.1-a-42.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/
           docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950_ainic \
                -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic \
                --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} .
