--- a/.github/workflows/docker/Dockerfile
+++ b/.github/workflows/docker/Dockerfile
@@ -20,6 +20,34 @@ RUN mkdir -p /opt && cd /opt && \
 
 RUN apt-get install --reinstall binutils -y && apt-get install numactl -y
 
+# LLVM has issue on DeepEP. Need to apply those patches
+ARG LLVM_REPO=https://github.com/ROCm/llvm-project.git
+ARG LLVM_BRANCH=release/rocm-rel-7.0
+
+WORKDIR /opt
+COPY .github/workflows/docker/7.0-deepep-swdev-540592.patch /opt/
+RUN git config --global user.email "you@example.com"
+RUN git config --global user.name "Your Name"
+RUN cd /opt \
+    && git clone ${LLVM_REPO} \
+    && cd llvm-project \
+    && git checkout ${LLVM_BRANCH} \
+    && git am /opt/7.0-deepep-swdev-540592.patch \
+    && mkdir build; cd build \
+    && cmake -G Ninja \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/opt/rocm/llvm/ \
+        -DLLVM_ENABLE_PROJECTS="clang;lld" \
+        -DLLVM_ENABLE_RUNTIMES=compiler-rt \
+        -DLLVM_TARGETS_TO_BUILD="AMDGPU;X86" \
+        -DCLANG_DEFAULT_LINKER=lld \
+        -DLLVM_PARALLEL_LINK_JOBS=4 \
+        ../llvm \
+    && ninja; ninja install \
+    && cd ../.. \
+    && rm -rf llvm-project \
+    && cd /opt
+
 # Set the default working directory
 WORKDIR /opt
 
