--- a/examples/megatron/configs/MI355X/qwen3_8B-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/qwen3_8B-pretrain.yaml
@@ -1,24 +1,28 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:llama3_70B-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:qwen3_8B-pretrain}
 workspace: ${PRIMUS_WORKSPACE:./output}
 
 modules:
   pre_trainer:
     framework: megatron
     config: pre_trainer.yaml
-    model: llama3.1_70B.yaml
+
+    # model to run
+    model: qwen3_8B.yaml
     overrides:
       # log
-      wandb_project: "Primus_DeepSeek_Pretrain"
+      wandb_project: "Primus_Qwen_Pretrain"
+      # disable_wandb: false
+      # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
       train_iters: 50
-      micro_batch_size: 3
-      global_batch_size: 24
+      micro_batch_size: 2
+      global_batch_size: 128
 
       seq_length: 8192
       max_position_embeddings: 8192
@@ -40,6 +44,8 @@ modules:
       pipeline_model_parallel_size: 1
       expert_model_parallel_size: 1
       overlap_grad_reduce: true
+      overlap_param_gather: true
+      gradient_accumulation_fusion: false
 
       # data
       mock_data: true
@@ -58,18 +64,7 @@ modules:
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
-
-      use_torch_fsdp2: true
-      use_distributed_optimizer: false
-      overlap_param_gather: false
-      ckpt_format: torch_dist
-      sequence_parallel: 1
-      gradient_accumulation_fusion: false
-
-      # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 80 # int
+      ckpt_format: torch
 
       # Cross entropy flags
       # cross_entropy_fusion_impl: "te"
