--- a/examples/megatron/configs/MI355X/qwen3_30B_A3B-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/qwen3_30B_A3B-pretrain.yaml
@@ -9,30 +9,29 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: qwen3_30B_A3B.yaml
+    model: ${PRIMUS_MODEL:qwen3_30B_A3B}.yaml
     overrides:
       # log
       wandb_project: "Primus_Qwen3_30B_A3B_Pretrain"
-      # disable_wandb: false
-      # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
+      # debug
+      moe_router_force_load_balancing: true
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
+      # hyper parameters
       train_iters: 50
       micro_batch_size: 4
-      global_batch_size: 32
-
-      seq_length: ${PRIMUS_SEQ_LENGTH:2048}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:131072}
-
-      lr: 1.0e-4
-      min_lr: 1.0e-5
+      global_batch_size: 256
+      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
+      lr: 1.0e-5
+      min_lr: 0.0
       lr_warmup_iters: 2
-      lr_decay_iters: 320000
+      lr_decay_iters: null
       lr_decay_style: cosine
-      weight_decay: 1.0e-1
+      weight_decay: 0.1
       adam_beta1: 0.9
       adam_beta2: 0.95
       eod_mask_loss: true
@@ -40,23 +39,27 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 1
-      pipeline_model_parallel_size: 1
-      expert_model_parallel_size: 1
-      sequence_parallel: 1
+      tensor_model_parallel_size: ${PRIMUS_TP:1}
+      pipeline_model_parallel_size: ${PRIMUS_PP:1}
+      expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
-
       overlap_param_gather: true
-      use_torch_fsdp2: false
-      use_distributed_optimizer: true
-      gradient_accumulation_fusion: true
-      ckpt_format: torch
 
       # data
       mock_data: true
-      train_data_path: null
+      train_data_path: ${PRIMUS_TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
+
+      # fusion
+      # 20250321: need latest megatron docker image
+      moe_permute_fusion: false
+      # fused wgrad gemm and accumulation
+      gradient_accumulation_fusion: false
+      # recommend set `false` in fp8
+      moe_use_legacy_grouped_gemm: false
+      # fused topk router with aux score
+      moe_use_fused_router_with_aux_score: false
 
       # ckpt
       finetune: false
@@ -69,14 +72,11 @@ modules:
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
-
-      # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 80 # int
+      ckpt_format: torch
+      eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: true
+      enable_primus_turbo: false
       use_turbo_attention: false
       use_turbo_grouped_mlp: false
 
