--- a/examples/maxtext/configs/MI355X/mixtral_8x7B-pretrain.yaml
+++ b/examples/maxtext/configs/MI355X/mixtral_8x7B-pretrain.yaml
@@ -22,8 +22,8 @@ modules:
       hf_access_token: ${HF_TOKEN:""}
 
       # checkpoint
-      enable_checkpointing: False
-      async_checkpointing: False
+      enable_checkpointing: false
+      async_checkpointing: false
 
       # inter-node parallelism strategy
       dcn_data_parallelism: -1
@@ -34,8 +34,8 @@ modules:
       ici_data_parallelism: 1
       ici_expert_parallelism: -1
 
-      sparse_matmul: False
-      megablox: False
+      sparse_matmul: false
+      megablox: false
       capacity_factor: 1
       max_target_length: 4096
       per_device_batch_size: 12
