--- a/primus/configs/models/maxtext/deepseek_v2_16B.yaml
+++ b/primus/configs/models/maxtext/deepseek_v2_16B.yaml
@@ -1,7 +1,7 @@
-bases:
+extends:
   - model_base.yaml
 
 model_name: "deepseek2-16b"
 attention: "cudnn_flash_te"
-use_iota_embed: True
+use_iota_embed: true
 tokenizer_path: "deepseek-ai/DeepSeek-V2-Lite"
