--- a/primus/configs/models/maxtext/llama2_7B.yaml
+++ b/primus/configs/models/maxtext/llama2_7B.yaml
@@ -1,7 +1,7 @@
-bases:
+extends:
   - model_base.yaml
 
 model_name: "llama2-7b"
 tokenizer_path: "meta-llama/Llama-2-7b"
 attention: "cudnn_flash_te"
-use_iota_embed: True
+use_iota_embed: true
