--- a/primus/configs/models/maxtext/llama3.3_70B.yaml
+++ b/primus/configs/models/maxtext/llama3.3_70B.yaml
@@ -1,7 +1,7 @@
-bases:
+extends:
   - model_base.yaml
 
 model_name: "llama3.3-70b"
 tokenizer_path: "meta-llama/Llama-3.3-70B-Instruct"
 attention: "cudnn_flash_te"
-use_iota_embed: True
+use_iota_embed: true
