--- a/primus/configs/models/maxtext/llama3_8B.yaml
+++ b/primus/configs/models/maxtext/llama3_8B.yaml
@@ -1,7 +1,7 @@
-bases:
+extends:
   - model_base.yaml
 
 model_name: "llama3-8b"
 tokenizer_path: "meta-llama/Meta-Llama-3-8B"
 attention: "cudnn_flash_te"
-use_iota_embed: True
+use_iota_embed: true
