--- a/primus/configs/models/maxtext/mixtral_8x7B.yaml
+++ b/primus/configs/models/maxtext/mixtral_8x7B.yaml
@@ -1,7 +1,7 @@
-bases:
+extends:
   - model_base.yaml
 
 model_name: "mixtral-8x7b"
 tokenizer_path: "mistralai/Mixtral-8x7B-v0.1"
 attention: "cudnn_flash_te"
-use_iota_embed: True
+use_iota_embed: true
