--- a/examples/megatron/configs/MI355X/qwen3_235B_A22B-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/qwen3_235B_A22B-pretrain.yaml
@@ -19,6 +19,7 @@ modules:
 
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
+      moe_router_force_load_balancing: true
 
       train_iters: 50
       micro_batch_size: 4
