--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -317,7 +317,7 @@ jobs:
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
           MASTER_PORT=10009 DATA_PATH=/apps/tas/0_public/data \
-          python ./tests/run_unit_tests.py --jax
+          JAX_SKIP_UT=1 python ./tests/run_unit_tests.py --jax
       - name: Clean
         run: |
           rm -rf ${PRIMUS_WORKDIR}/Primus-Turbo
