--- a/primus/configs/modules/maxtext/trainer_base.yaml
+++ b/primus/configs/modules/maxtext/trainer_base.yaml
@@ -581,6 +581,7 @@ heartbeat_reporting_interval_in_seconds: 5
 report_performance_metric_for_gcp_monitoring: false
 
 enable_tensorboard: true
+enable_wandb: false
 
 # Vertex AI Tensorboard Configurations - https://github.com/google/maxtext/tree/main/getting_started/Use_Vertex_AI_Tensorboard.md
 # Set to True for GCE, False if running via XPK
