feat: Add MLflow artifact logging for trace and log files
- Add mlflow_artifacts.py with functions to upload trace and log files
- Update global_vars.py to track exp_root_path and provide upload function
- Integrate artifact upload into trainer.py before MLflow run ends
- Add config options: mlflow_upload_traces, mlflow_upload_logs
- Support profiling all ranks with profile_ranks parameter

--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -5,6 +5,8 @@ disable_wandb: true
 disable_mlflow: true
 mlflow_run_name: null
 mlflow_experiment_name: null
+mlflow_upload_traces: true  # Upload profiler trace files to MLflow
+mlflow_upload_logs: true    # Upload training log files to MLflow
 disable_compile_dependencies: true
 # NOTE:
 # - If `use_rocm_mem_info = True`, ROCm memory information will be collected
