--- a/.github/workflows/docker/Dockerfile_v25.10_ainic
+++ b/.github/workflows/docker/Dockerfile_v25.10_ainic
@@ -83,8 +83,8 @@ ENV MPI_PATH=${WORKDIR}/ompi-4.1.6/install
 RUN cd ${WORKDIR} && \
     git clone https://github.com/ROCm/rccl.git && \
     cd rccl && git checkout rocm-7.1.0 && \
-    ./install.sh -l --prefix build/ --disable-mscclpp-kernel \
-        --disable-msccl-kernel --amdgpu_targets="gfx950" 2>&1 | tee log_rccl_install.txt && \
+    ./install.sh -l --prefix build/ --disable-msccl-kernel \
+        --amdgpu_targets="gfx950" 2>&1 | tee log_rccl_install.txt && \
     cd ${WORKDIR}
 
 ENV RCCL_HOME=${WORKDIR}/rccl
